# pysc2

./: makefile  pyproject.toml
pysc2/run_configs/: lib.py  platforms.py
src/pysc2/agents/: base_agent.py  no_op_agent.py  random_agent.py  scripted_agent.py
src/pysc2/env/: available_actions_printer.py  base_env_wrapper.py  converted_env.py  converted_env_test.py  host_remote_agent.py  lan_sc2_env.py  mock_sc2_env.py  mock_sc2_env_comparison_test.py  mock_sc2_env_test.py  remote_sc2_env.py  sc2_env.py  sc2_env_test.py
src/pysc2/env/converter/: converter.py  converter_test.py  derive_interface_options.py
src/pysc2/lib/: actions.py  colors.py  features.py  features_test.py  image_differencer.py  image_differencer_test.py  named_array_test.py  np_util_test.py  point_flag.py  point_test.py  portspicker_test.py  proto_diff_test.py  protocol.py  remote_controller.py  renderer_ascii.py  renderer_human.py  replay.py  run_parallel_test.py  sc_process.py  stopwatch.py  stopwatch_test.py  transform.py
src/pysc2/maps/: __init__.py  ladder.py  melee.py  mini_games.py
src/pysc2/run_configs/: __init__.py  lib.py  platforms.py
src/pysc2/tests/: actions_test.py  debug_test.py  dummy_observation.py  dummy_observation_test.py  easy_scripted_test.py  general_actions_test.py  host_remote_agent_test.py  multi_player_env_test.py  multi_player_test.py  obs_spec_test.py  obs_test.py  observer_test.py  ping_test.py  protocol_error_test.py  random_agent_test.py  render_test.py  replay_obs_test.py  step_mul_override_test.py  utils.py  versions_test.py
(+6 files in other folders)
